--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -6,7 +6,7 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /bank
 
 
-COPY ./requirements.txt .
+COPY ../requirements.txt .
 RUN pip install -r requirements.txt
 
 COPY . .
