--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
         build: ./backend
         expose:
             - '8000'
-        command: 'python manage.py migrate --noinput && python manage.py runserver'
+        command: >      
+            bash -c "python manage.py migrate --noinput && python manage.py runserver"
         volumes:
             - .:/bank
 
