--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream backend{
+upstream back{
     server backend:8000;
 }
 server{
@@ -6,7 +6,7 @@ server{
     listen [::]:80;
 
     location /{
-        proxy_pass http://backend;
+        proxy_pass http://back;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
