--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         expose:
             - '8000'
         command: >      
-            bash -c "python manage.py migrate --noinput && python manage.py runserver"
+            bash -c "python manage.py migrate --noinput && gunicorn core.wsgi:application -bind 0.0.0.0:8000 "
         volumes:
             - .:/bank
 
